# ChangeLog for app-emulation/ti99sim
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*ti99sim-0.12.1 (05 May 2015)

  05 May 2015; Vincent Hardy <vincent.hardy.be@gmail.com>:
  Tested on BeagleBone Black and add ~arm KEYWORDS.

  02 May 2015; Vincent Hardy <vincent.hardy.be@gmail.com>:
  Version bump

*ti99sim-0.0.11 (21 Sep 2013)

  21 Sep 2013; Vincent Hardy <vincent.hardy.be@gmail.com>:
  Initial import of ti99sim.
