@@ -8,7 +8,9 @@ AUX ti99-install3.patch 372 SHA256 0c8373b551a6167973eaf704895fa0823971a441d393a
 DIST classic99.zip 702729 SHA256 0a17e703a0153a4fe2dfa0c413238956453c9fabc3730673ce9c37ca0dbc80d0 SHA512 ae27be9f58b004fdbf05746a20c271f3d1656c88f042561f22825e7254ba20e45710f46acbb1946b1a6b2d71082261ba24fad78e6a7cd1450e96acf1d99fe4bd WHIRLPOOL 0550014fd5d2f519f883e6a678747595644cff68c1bbe6f52f0a7669bd9b0fafa3917562272c209ff9780a39ffa088f4d7c01fb0b5d758c1f1c438321efb7c49
 DIST ti99sim-0.0.11.src.tar.gz 206656 SHA256 a078366ca5792b445e777aa525228e40837a8fbd63b4da90a36875d9a4ed5206 SHA512 c3b4f22c04e61a633247a34b9880d9f9b634bee9ee09f14b9fa38f5a084f6bd5fc464d529fd1fbbad2d5bb4daa85d517615ecd42c590daa8f729259d8dd7cba4 WHIRLPOOL 0c2e5931b42e1c9dcd3e1cd0834f368de04060d30bcf85e223575bfc77ab850680f66ac2f35cc05dd4365e748e7b1437722f4337e87ab5dbd97a9fdd01b23054
 DIST ti99sim-0.12.1.src.tar.gz 227077 SHA256 c1374480f477fed041aaf6c7cdbb2a1bf931d66d9f5eee6954173b2e2c800b55 SHA512 7e586d90b3bb47e136c388dd447ab46255fa8967e5e188de773dcf640ea88a8f3b6ae51178290d51d3cf431e521bc7cb17216b1d13588c7bc07703448ee4123b WHIRLPOOL 1c94b18757c2601faaf0c84c5fab95663c7629a84dfbf80d6682c54b8e83b5118940310711575dad29f328745d648b522c31811bb4349b5a29dd0cd97bf2f3e3
+DIST ti99sim-0.13.0.src.tar.gz 205836 SHA256 2524b5c4fed8d0dfeb58ecbb9fd3c5e8b065b3831b8b7694b64682da42b4ce8d SHA512 787f9031046d54c8cb5e312d56b08fe9d9d80acbde00788f668508472a54d85a53cad3668e6d3146ff88c5bafcc6135c236f652d19f4808b29012f62127f311b WHIRLPOOL 1394db2d6fe6f15aefa84a15f286aa379e8c87587768afa58f7e81baae62f1c47920d130bb6b174b4b156f2c6b6b13202d5a026f3a8d6dc92631394a451056b6
 EBUILD ti99sim-0.0.11.ebuild 2355 SHA256 d9a19321eedeb6234c8fb9efdb9fae952095d9c69e1adf6961417107436974e2 SHA512 0d7a19c30f7546d9af553f5a1ed5f76e4edfd811364d14b6feea283bf4e1d4c640056603c91cf543cbeacd00d8f40fc9dcd5baec2daa15747415b0c81289d065 WHIRLPOOL 912344a0844220312664a731d8e28c7410e80794827459a25353e7ee86289b4dc4a140a0d67fe9afe5560d254254f78af2653a852bfddc1571f3e25f45387ac6
 EBUILD ti99sim-0.12.1.ebuild 2269 SHA256 8b28fb352a84702517b140543fd0e4c1bb85fb32fbf0eab6a94a38756272d7ff SHA512 de83a4574a9bda5bb6c159685db0f037e1c98122e4cbd296e8c118d0458bd640eef2dbb8a8877b420346793ac29c0df86b44984186a954e25f32d96edde4defa WHIRLPOOL 9097b946c3f611f7c8acf90497949350fdb51b77b8f8d4f6137bcf9ad8e1b1f040aa100ddf045600910fc810e119c69c430dcff390b4d37395cf26fe5550c789
-MISC ChangeLog 454 SHA256 b722a7032415894d28033babc783a98d02ed074dfe765ea46363dd3a5109910c SHA512 e411a7b941b8cd5882f7ce837e70a2162db81e6cad6ac1f76971856cc513df1670c5bda8dc9f9f7d2ed8a640bb2c6674c78472add152a164676e180ce1211061 WHIRLPOOL 50194090fcfe0e45db664a80afab226c605ffa0e72f0c1d7c7f8ae5dc93c4d2737c77585781c22045b080bdcc4bd378b8a2194a1648a114d1c43ab5f425ab65d
+EBUILD ti99sim-0.13.0.ebuild 2290 SHA256 2373d6b38f2c9c64a7a593d5fa150d0f2a823fabe15af589259d4270a5498ff6 SHA512 aa1a8229dc2d5424eddb48ea9ddb315d628a63ba2ff5869ba071737ba649a2ed7799e83c572c31112e406826b0b9105019ffa6862647d5085e4046cb027aa9ba WHIRLPOOL f48aee95eed2c43a256e98e6f0fcb26dfd0a3c3a47d5116729cb6455b1d63f6685e9fbbc4f0f0c75cdb9a4ef21964740e39e6bb515b969005fc57680edd93654
+MISC ChangeLog 569 SHA256 3a956eb66e8da460e75a446048e918e4fda2d5aeae94ac3615429da8ba7e2fcb SHA512 57ce4ac46a0b6b6c1bb27d0628752ad340225f36c8a79b5da08f6ea2957a2ae5a87929391e39d552d014b5a3e195cdaed8e8816af68976767461be21aa443f86 WHIRLPOOL f04a0c38067cd48b6bd5bdcb32ea65a49b6b9a094c48ac26958933135e0067294fcc23e65c490e167dcd21fc59e429f8e922baac992735324f73ae55dfbaf65a
 MISC metadata.xml 782 SHA256 16cc6b27b4819bbb48fffa99875d95548cd4d3427be3cfa9f16241e4a220bd62 SHA512 6bb6ee9a86630df72998762851af8e5b050c41628dfbcf14b8bc0e1e9782a784b55a1a5f35cf3b38f74bbaaead9cb2e09367b15c451b9dfbb76b4886155787de WHIRLPOOL 451d50f1ea26ba330fe7b3206786254e159f5877d82c479e6ea1321f45dbd71b0dd73dc11ba53a7dfb93e2aeb531c1b3f8506ce35692b49195def2f0a8d8580c
