@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/ti99sim
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+*ti99sim-0.13.0 (10 Mar 2016)
+
+  10 Mar 2016; Vincent Hardy <vincent.hardy.be@gmail.com>:
+  EAPI=6
+  Version bump
 
 *ti99sim-0.12.1 (05 May 2015)
 
